fix: reduce sidebar font weight and tighten spacing
Address feedback from Pete Vielhaber:
- Reduce root-level font-weight from 600 to 500
- Reduce gap between collapsed root items from 0.75rem to 0.375rem
- Reduce code block padding from 2rem to 1rem
- Enforce monospace font on all code elements

--- a/src/css/partials/_sidebar.scss
+++ b/src/css/partials/_sidebar.scss
@@ -22,7 +22,7 @@ $child-sidebar-item-font-size: 14px;
     // Root level items (categories and links)
     > li.theme-doc-sidebar-item-link-level-1,
     > li.theme-doc-sidebar-item-category-level-1 {
-      margin-top: 0.75rem;
+      margin-top: 0.375rem;
 
       &:first-child {
         margin-top: 0;
@@ -31,7 +31,7 @@ $child-sidebar-item-font-size: 14px;
       > div.menu__list-item-collapsible > a.menu__link,
       > a.menu__link {
         font-size: $root-sidebar-item-font-size;
-        font-weight: 600;
+        font-weight: 500;
         letter-spacing: normal;
         color: var(--arbitrum-text);
       }
@@ -100,7 +100,7 @@ $child-sidebar-item-font-size: 14px;
         border-bottom-right-radius: 0;
 
         > a {
-          font-weight: 600;
+          font-weight: 500;
           font-size: $root-sidebar-item-font-size;
           border-bottom-left-radius: 0;
           border-bottom-right-radius: 0;
