--- a/src/css/partials/_variables.scss
+++ b/src/css/partials/_variables.scss
@@ -96,6 +96,7 @@
   --ifm-link-color: var(--arbitrum-color-primary);
   --ifm-link-hover-color: hsl(211, 99%, 35%);
   --ifm-code-font-size: 90%;
+  --ifm-pre-padding: 1rem;
   --ifm-global-radius: 0;
   --ifm-navbar-item-padding-horizontal: 0.875rem;
   --ifm-font-family-base: 'Aeonik', -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui,
